# static-server

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: file.h  http.h  misc.h  socket.h  thread_pool.h
src/: file.cpp  http.cpp  misc.cpp  socket.cpp  thread_pool.cpp
